--- a/popup.html
+++ b/popup.html
@@ -2,33 +2,13 @@
 <html>
 <head>
 	<title>XPather</title>
-	<style>
-		body {
-			width: 600px;
-		}
-
-		input {
-			width: 600px;
-			padding: 6px;
-			background: #fefefe;
-			border: 1px solid #ddd;
-			border-radius: 2px;
-			outline: 0;
-			box-sizing: border-box;
-			transition: all 1s;
-		}
-
-		input:focus {
-			border-color: rgba(82, 168, 236, 0.8);
-			box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px rgba(82, 168, 236, 0.3);
-		}
-	</style>
+	<link rel="stylesheet" href="popup.css">
 	<script src="jquery.js"></script>
 	<script src="popup.js"></script>
 </head>
 <body>
 	<form>
-		<input type="text" id="xpath" value="//">
+		<input type="text" id="xpath">
 	</form>
 </body>
 </html>
